--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     </script>
   </head>
   <body class="bg-gray-50">
-    <div id="root" class="min-h-screen bg-gray-50">
-      <div class="min-h-screen bg-gray-50"></div>
-    </div>
+    <div id="root" class="min-h-screen bg-gray-50"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
